# streamlit-trading-app

./: .autopep8  .editorconfig  .env.dev  .gitignore  Home.py  README.md  UI for DXY Trade.xlsx  __init__.py  alembic.ini  nicegui-main.py  pyproject.toml  test.db  🏠_Home.py
alembic/: env.py
alembic/versions/: 14774bdbe30a_add_tables.py  45b130a81c9d_add_tables.py  623cc28c52dc_add_accounts_table.py  7de4b5e555e4_add_accounts_table.py  9da4d243ab48_update_fields_for_accounts_table.py  aaee4caa762f_add_tables.py  d9ccd55683ed_add_tables.py  e4c72536b302_add_tables.py  fceaa3f35a60_add_tables.py
data_access/: add_instrument.py  get_all_accounts.py  seed.py  sync_symbols.py
db/: base.py  engine.py  get_session.py  session.py
logger/: setup.py
metatrader5/: MT5Client.py  MT5Client_asyncio.py
models/: Account.py  Accounts.py  Broker.py  Instrument.py  Strategy.py  Suffix.py  Symbol.py  Trade.py  __init__.py  currencies.py
models/enums/: __init__.py  account_type.py  platform_type.py  trade_success_probability.py  trade_type.py  trading_mindstate.py
ng/: __init__.py  header.py  left_drawer.py  right_drawer.py  state.py
ng/pages/: __init__.py  accounts.py  dashboard.py  trading.py
nicequi/: router_frame.js
pages/: 1_Trades.py  1_🚀_Trading.py  2_Accounts.py  2_📊_Analytics.py  3_📋_Journal.py  💼_Accounts.py
utils/: case_converter.py  session_data.py  ticker.py  tree.py
